# toolchainkit

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  calculate_hashes_all.py  pyproject.toml  pytest.ini  requirements.txt  validate_configs.py
.github/workflows/: code-quality.yml  e2e-tests.yml  integration-tests.yml  link-validation-full.yml  link-validation.yml  unit-tests.yml
docs/: README.md  ROADMAP.md  VISION.md  architecture.md  bootstrap.md  build_cache.md  ci_cd.md  cli.md  cmake_toolchain.md  config.md  config_layers.md  config_schema.md  cross_compilation.md  directory.md  doctor.md  download.md  filesystem.md  ide_cmake_presets.md  ide_vscode.md  lockfile.md  locking.md  package_managers.md  platform.md  platform_compatibility.md  plugin_management.md  plugins.md  registry.md  state.md  sysroot.md  toolchains.md  upgrade.md  verification.md
docs/dev/: ARCHITECTURE_REFACTORING.md  PLUGIN_CLI_IMPLEMENTATION.md  README.md  architecture.md  bootstrap_enhancement_plan.md  building_blocks.md  extending.md  link_validation_development.md  maintenance.md  testing.md
docs/testing/: README.md  link_validation.md  regression_testing_guide.md
examples/: EXAMPLES_GUIDE.md  README.md
examples/01-new-project/: -  .gitignore  CMakeLists.txt  CONFIGURATIONS.md  README.md  conanfile.txt  generate_configs.py  test_configs.py  toolchainkit_1.yaml  toolchainkit_10.yaml  toolchainkit_13.yaml  toolchainkit_14.yaml  toolchainkit_16.yaml  toolchainkit_17.yaml  toolchainkit_18.yaml  toolchainkit_2.yaml  toolchainkit_21.yaml  toolchainkit_22.yaml  toolchainkit_23.yaml  toolchainkit_24.yaml  toolchainkit_25.yaml  toolchainkit_26.yaml  toolchainkit_27.yaml  toolchainkit_3.yaml  toolchainkit_4.yaml  toolchainkit_8.yaml  toolchainkit_9.yaml
examples/01-new-project/include/mylib/: mylib.h
examples/01-new-project/local/: toolchainkit_1.yaml  toolchainkit_10.yaml  toolchainkit_11.yaml  toolchainkit_12.yaml  toolchainkit_15.yaml  toolchainkit_19.yaml  toolchainkit_2.yaml  toolchainkit_20.yaml  toolchainkit_27.yaml  toolchainkit_3.yaml  toolchainkit_5.yaml  toolchainkit_6.yaml  toolchainkit_7.yaml
examples/01-new-project/src/: main.cpp  mylib.cpp
examples/01-new-project/tests/: test_main.cpp
examples/02-existing-cmake/: CMakeLists.txt  README.md  conanfile.txt  toolchainkit.yaml
examples/03-cicd-integration/: README.md
examples/04-cross-compilation/: README.md
examples/05-developer-onboarding/: README.md
examples/06-reproducible-builds/: README.md
examples/07-custom-allocator/: CMakeLists.txt  README.md  conanfile.txt  toolchainkit.yaml
examples/07-custom-allocator/src/: benchmark.cpp  main.cpp
scripts/ci/: __init__.py  check_coverage.py
tests/: README.md  __init__.py  conftest.py  test_filesystem_integration.py  test_plugin_commands.py  test_python_env_integration.py
tests/backends/: __init__.py  test_cmake_backend.py
tests/bootstrap/: __init__.py  test_compatibility_integration.py  test_generator.py
tests/caching/: test_detection.py  test_detection_integration.py  test_launcher.py  test_launcher_integration.py  test_remote.py
tests/ci/: __init__.py  test_templates.py
tests/cli/: __init__.py  test_bootstrap.py  test_cleanup.py  test_configure.py  test_configure_cache.py  test_custom_config.py  test_doctor.py  test_generator_config.py  test_init.py  test_parser.py  test_upgrade.py  test_utils.py  test_verify.py  test_vscode_command.py
tests/cmake/: __init__.py  test_api.py  test_backends.py  test_clang_yaml.py  test_compilers.py  test_gcc_yaml.py  test_integration.py  test_msvc_yaml.py  test_projects.py  test_stdlib.py  test_stdlib_integration.py  test_toolchain_generator.py  test_toolchain_generator_integration.py  test_yaml_compiler.py
tests/config/: test_allocator_layers.py  test_composer.py  test_layers_integration.py  test_lockfile.py  test_parser.py  test_parser_custom_paths.py  test_profiling_layers.py  test_security_layers.py  test_validation.py
tests/core/: __init__.py  test_cache_registry.py  test_compatibility.py  test_directory.py  test_download.py  test_download_integration.py  test_filesystem.py  test_locking.py  test_platform.py  test_platform_capabilities.py  test_python_env.py  test_registry_integration.py  test_state.py  test_verification.py  test_verification_integration.py
tests/cross/: __init__.py  test_integration.py  test_sysroot.py  test_sysroot_integration.py  test_targets.py
tests/data/: README.md
tests/e2e/: README.md  __init__.py  conftest.py  test_api_workflows.py  test_smoke.py
tests/fixtures/: README.md  __init__.py  directories.py  projects.py  toolchains.py
tests/ide/: __init__.py  test_presets.py  test_vscode.py  test_vscode_config.py
tests/integration/: test_lockfile_integration.py  test_locking_integration.py
tests/link_validation/: README.md  conftest.py  test_git_repositories.py  test_infrastructure_smoke.py  test_tool_downloader_links.py  test_toolchain_links.py
tests/mocks/: __init__.py  filesystem.py  network.py
tests/plugins/: conftest.py  test_base_plugin.py  test_build_backend_plugin.py  test_compiler_plugin.py  test_context.py  test_discovery.py  test_loader.py  test_manager.py  test_metadata.py  test_package_manager_plugin.py  test_registry.py
tests/regression/: __init__.py  conftest.py  test_fixtures.py  (+7 more)
toolchainkit/: __init__.py  __main__.py
(+182 files in other folders)
